@@ -1,3 +1,7 @@
+2007-12-11  Mike Kestner  <mkestner@novell.com>
+
+	* parser/gapi2xml.pl: fix tightloop in single-line prop declarations.
+
 2007-12-06  Mike Kestner  <mkestner@novell.com>
 
 	* * : update to 2.12 API.
